# cmake_opencv_project

./: README.md
example/: CMakeLists.txt  DisplayImage.cpp
